--- a/src/components/sign_up/signUp.css
+++ b/src/components/sign_up/signUp.css
@@ -3,18 +3,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
     background-color: #f0f4fc;
   }
   
   .signup-card {
     display: flex;
     background-color: white;
-    border-radius: 16px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 1000px;
+    width: 100%;
+    height: 100%;
+
+    
   }
   
   /* Left Section */
